[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reckn"
version = "1.3.0"
description = "A Soulver-like calculator notepad for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "David Vignoni"}
]
keywords = ["calculator", "notepad", "terminal", "tui", "soulver", "math", "units", "currency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.40.0",
    "requests>=2.25.0",
]

[project.scripts]
reckn = "reckn.__main__:main"

[project.urls]
Homepage = "https://github.com/davigno/reckn"
Repository = "https://github.com/davigno/reckn"
Issues = "https://github.com/davigno/reckn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["reckn*"]

[tool.setuptools.package-data]
reckn = ["assets/*.svg"]
